--- a/NVMain/DataEncoders/DH-PSO/SConscript
+++ b/NVMain/DataEncoders/DH-PSO/SConscript
@@ -39,4 +39,4 @@ if 'NVMAIN_BUILD' in env:
     NVMainSourceType('src', 'Backend Source')
 
 
-NVMainSource('FlipNWrite.cpp')
+NVMainSource('DH-PSO.cpp')
